# covis-camcalib

./: CMakeLists.txt  README.md
images/: save.py
include/: cb_tracker.h  distortion_camera.h  find_dots.h  generic_camera.h  grid_tracker.h  init_auto.h  perspective_camera.h  vvs.h
main/: calibration.cpp  posecomputation.cpp  record.cpp
src/: cb_tracker.cpp  grid_tracker.cpp  point_calib.cpp  point_estim.cpp  vvs.cpp
